fixed:Mail and overflow

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -65,8 +65,8 @@ body {
     display: flex;
     align-items: end;
     flex-direction: column;
-    position: relative; /* Context voor absolute elementen */
-    overflow: visible; /* Zorg dat elementen niet afgesneden worden */    
+    position: relative; 
+    overflow: visible;  
     cursor: all-scroll;
 }
 
@@ -164,7 +164,12 @@ body {
     flex-direction: column;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: opacity 0.3s ease-in-out;
+    max-height: 70%;
+    overflow: auto;
+    overflow-x: hidden; 
+    overflow-y: scroll; 
 }
+
 
 .popup p {
     padding-top: 4px;
@@ -187,7 +192,26 @@ body {
     justify-content: center;
     align-items: center;
 }
-
+.popup::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* Track */
+  .popup::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 15px;
+  }
+   
+  /* Handle */
+  .popup::-webkit-scrollbar-thumb {
+    background: #343469;
+    border-radius: 7px;
+  }
+  
+  /* Handle on hover */
+  .popup::-webkit-scrollbar-thumb:hover {
+    background: rgb(245, 130, 32); 
+  }
 /* Opslaan-knop */
 .button {
     margin: 10px;
